test-package-compiler/src/snapshots/test_package_compiler__generated_tests__opaque_type_accessor.snap
---
source: test-package-compiler/src/generated_tests.rs
expression: "./cases/opaque_type_accessor"
---
error: Unknown record field
   ┌─ src/two.gleam:10:19
   │
10 │   let name = user.name
   │                   ^ This field does not exist

The value being accessed has this type:

    User

It does not have any fields.

error: Unknown record field
   ┌─ src/two.gleam:11:20
   │
11 │   let score = user.score
   │                    ^ This field does not exist

The value being accessed has this type:

    User

It does not have any fields.
